Push Local Development to Remote

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -34,7 +34,7 @@
     <div class="app">
         <h2>计划任务</h2>
         <p>在这里调整服务器的计划任务。</p>
-        <p>In progress. In heavy development</p>
+        <p>Coming soon. In heavy development. 请直接通过 config/worker.json 编辑 worker pron 任务</p>
         <!--<p>共有 {{ count }} 个计划任务。</p>
         {% for task in tasks %}
         <fluent-card class="taskCard">
